{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 8,
  "lineage": "91aa193d-e51c-b069-fae3-5f792f09779c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-29T23:32:04.657-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloud-order-platform/global/firewalls/cloud-order-platform-allow-health-checks",
            "log_config": [],
            "name": "cloud-order-platform-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/global/networks/cloud-order-platform-vpc",
            "params": [],
            "priority": 1000,
            "project": "cloud-order-platform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/global/firewalls/cloud-order-platform-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "cloud-order-platform-allow-health-checks",
            "project": "cloud-order-platform"
          },
          "dependencies": [
            "google_compute_network.cloud_order_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-08-29T23:32:04.540-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloud-order-platform/global/firewalls/cloud-order-platform-allow-internal",
            "log_config": [],
            "name": "cloud-order-platform-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/global/networks/cloud-order-platform-vpc",
            "params": [],
            "priority": 1000,
            "project": "cloud-order-platform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/global/firewalls/cloud-order-platform-allow-internal",
            "source_ranges": [
              "10.10.0.0/20",
              "10.20.0.0/16",
              "10.30.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "cloud-order-platform-allow-internal",
            "project": "cloud-order-platform"
          },
          "dependencies": [
            "google_compute_network.cloud_order_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cloud_order_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "description": "VPC for Cloud Order Platform",
            "enable_ula_internal_ipv6": false,
            "id": "projects/cloud-order-platform/global/networks/cloud-order-platform-vpc",
            "mtu": 0,
            "name": "cloud-order-platform-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7314540938330534050",
            "numeric_id": "7314540938330534050",
            "project": "cloud-order-platform",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/global/networks/cloud-order-platform-vpc"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "cloud-order-platform-vpc",
            "project": "cloud-order-platform"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "cloud_order_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-08-29T23:32:09.293-07:00",
            "deletion_policy": "DELETE",
            "gateway_address": "10.10.0.1",
            "id": "projects/cloud-order-platform/regions/asia-south1/subnetworks/cloud-order-platform-subnet",
            "ip_cidr_range": "10.10.0.0/20",
            "name": "cloud-order-platform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/global/networks/cloud-order-platform-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloud-order-platform",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "gke-pod-range"
              },
              {
                "ip_cidr_range": "10.30.0.0/20",
                "range_name": "gke-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-order-platform/regions/asia-south1/subnetworks/cloud-order-platform-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 60722242064904326
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "cloud-order-platform-subnet",
            "project": "cloud-order-platform",
            "region": "asia-south1"
          },
          "dependencies": [
            "google_compute_network.cloud_order_vpc"
          ]
        }
      ]
    }
  ]
}